# resume_profiler

./: README.md  crew.py  main.py  pyproject.toml  report.md
src/resume_profiler/: main.py
src/resume_profiler/config/: agents.yaml  tasks.yaml
