[project]
name = "resume_profiler"
version = "0.1.0"
description = "resume_profiler using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.140.0,<1.0.0"
]

[project.scripts]
resume_profiler = "resume_profiler.main:run"
run_crew = "resume_profiler.main:run"
train = "resume_profiler.main:train"
replay = "resume_profiler.main:replay"
test = "resume_profiler.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
